// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuDrawer snapshots tests renders menu with dividers 1`] = `
<Drawer
  containerClassName="main-drawer"
  disableSwipeToOpen={false}
  docked={true}
  open={null}
  openSecondary={false}
  swipeAreaWidth={30}
  width={320}
  zDepth={2}
>
  <div
    className="layout-fill side-drawer"
  >
    <div
      className="logo-wrapper"
    />
    <List
      className="main-menu"
    >
      <span
        className="menu-item-container"
      >
        <Link
          replace={false}
          to="/"
        >
          <ListItem
            autoGenerateNestedIndicator={true}
            containerElement="span"
            disableKeyboardFocus={false}
            disabled={false}
            initiallyOpen={false}
            insetChildren={false}
            leftIcon={null}
            nestedItems={Array []}
            nestedLevel={0}
            onClick={[Function]}
            onKeyboardFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onNestedListToggle={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            open={null}
            primaryText="Primary text 0"
            primaryTogglesNestedList={false}
            secondaryText="secondary text 0"
            secondaryTextLines={1}
          />
        </Link>
      </span>
      <span
        className="menu-item-container"
      >
        <Link
          replace={false}
          to="/xyz"
        >
          <ListItem
            autoGenerateNestedIndicator={true}
            containerElement="span"
            disableKeyboardFocus={false}
            disabled={false}
            initiallyOpen={false}
            insetChildren={false}
            leftIcon={null}
            nestedItems={Array []}
            nestedLevel={0}
            onClick={[Function]}
            onKeyboardFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onNestedListToggle={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            open={null}
            primaryText="Primary text 1"
            primaryTogglesNestedList={false}
            secondaryText="secondary text 1"
            secondaryTextLines={1}
          />
        </Link>
      </span>
    </List>
  </div>
</Drawer>
`;

exports[`MenuDrawer snapshots tests renders menu with logo 1`] = `
<Drawer
  containerClassName="main-drawer"
  disableSwipeToOpen={false}
  docked={false}
  open={false}
  openSecondary={false}
  swipeAreaWidth={30}
  width={320}
  zDepth={2}
>
  <div
    className="layout-fill side-drawer"
  >
    <div
      className="logo-wrapper"
    >
      <img
        alt="desc of image"
        src="http://image/image.svg"
      />
    </div>
    <List
      className="main-menu"
    >
      <span
        className="menu-item-container"
      >
        <Link
          replace={false}
          to="/"
        >
          <ListItem
            autoGenerateNestedIndicator={true}
            containerElement="span"
            disableKeyboardFocus={false}
            disabled={false}
            initiallyOpen={false}
            insetChildren={false}
            leftIcon={null}
            nestedItems={Array []}
            nestedLevel={0}
            onClick={[Function]}
            onKeyboardFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onNestedListToggle={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            open={null}
            primaryText="Primary text 0"
            primaryTogglesNestedList={false}
            secondaryText="secondary text 0"
            secondaryTextLines={1}
          />
        </Link>
      </span>
      <span
        className="menu-item-container"
      >
        <Link
          replace={false}
          to="/abc"
        >
          <ListItem
            autoGenerateNestedIndicator={true}
            containerElement="span"
            disableKeyboardFocus={false}
            disabled={false}
            initiallyOpen={false}
            insetChildren={false}
            leftIcon={null}
            nestedItems={Array []}
            nestedLevel={0}
            onClick={[Function]}
            onKeyboardFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onNestedListToggle={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            open={null}
            primaryText="Primary text 0"
            primaryTogglesNestedList={false}
            secondaryText="secondary text 0"
            secondaryTextLines={1}
          />
        </Link>
      </span>
    </List>
  </div>
</Drawer>
`;

exports[`MenuDrawer snapshots tests renders menu without dividers 1`] = `
<Drawer
  containerClassName="main-drawer"
  disableSwipeToOpen={false}
  docked={false}
  open={false}
  openSecondary={false}
  swipeAreaWidth={30}
  width={320}
  zDepth={2}
>
  <div
    className="layout-fill side-drawer"
  >
    <div
      className="logo-wrapper"
    />
    <List
      className="main-menu"
    >
      <span
        className="menu-item-container"
      >
        <Link
          replace={false}
          to="/"
        >
          <ListItem
            autoGenerateNestedIndicator={true}
            containerElement="span"
            disableKeyboardFocus={false}
            disabled={false}
            initiallyOpen={false}
            insetChildren={false}
            leftIcon={null}
            nestedItems={Array []}
            nestedLevel={0}
            onClick={[Function]}
            onKeyboardFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onNestedListToggle={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            open={null}
            primaryText="Primary text 0"
            primaryTogglesNestedList={false}
            secondaryText="secondary text 0"
            secondaryTextLines={1}
          />
        </Link>
      </span>
      <span
        className="menu-item-container"
      >
        <Link
          replace={false}
          to="/abc"
        >
          <ListItem
            autoGenerateNestedIndicator={true}
            containerElement="span"
            disableKeyboardFocus={false}
            disabled={false}
            initiallyOpen={false}
            insetChildren={false}
            leftIcon={null}
            nestedItems={Array []}
            nestedLevel={0}
            onClick={[Function]}
            onKeyboardFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            onNestedListToggle={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
            open={null}
            primaryText="Primary text 0"
            primaryTogglesNestedList={false}
            secondaryText="secondary text 0"
            secondaryTextLines={1}
          />
        </Link>
      </span>
    </List>
  </div>
</Drawer>
`;
